--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
           $('#m').val('');
           return false;
         });
+        // This creates the messages wrapped in <li> tags
         socket.on('chat message', function(msg){
           $('#messages').append($('<li>').text(msg));
           window.scrollTo(0, document.body.scrollHeight);
